Updated to add sam subseq.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,4 @@
-TARGETS=samToBed samToDotPlot samLiftover
+TARGETS=samToBed samToDotPlot samLiftover subdepth samSubseq
 INSTALLDIR?=../bin
 all: $(TARGETS)
 install:
@@ -6,14 +6,20 @@ install:
 	cp $(TARGETS) $(INSTALLDIR)
 
 CPPOPTS= -g
+subdepth: SubSampleDepth.cpp
+	g++ $(CPPOPTS) $^ -o $@
+
 samToBed: SamToBed.cpp
 	g++ $(CPPOPTS) $^ -o $@
 
 samToDotPlot: SamToDotPlot.cpp
 	g++ $(CPPOPTS) $^ -o $@
 
-samLiftover: SamLiftover.cpp
-	g++ $(CPPOPTS) $^ -o $@
+samLiftover: SamLiftover.cpp LiftOver.h
+	g++ $(CPPOPTS) $< -o $@
+
+samSubseq: SamExtractSubSeq.cpp LiftOver.h
+	g++ $(CPPOPTS) $< -o $@
 
 
 clean:
