Updated samLiftover to search multiple overlapping contigs.  Various other updates. 	modified:   LiftOver.h modified:   Makefile 	modified:   RenderPlot.R 	modified:   SamExtractSubSeq.cpp 	modified:   SamLiftover.cpp 	modified:   SamToBed.cpp

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,7 +5,7 @@ install:
 	mkdir -p $(INSTALLDIR)
 	cp $(TARGETS) $(INSTALLDIR)
 
-CPPOPTS= -g2
+CPPOPTS= -g -O2 
 subdepth: SubSampleDepth.cpp
 	g++ $(CPPOPTS) $^ -o $@
 
